# ifj21

./: .gitignore  CMakeLists.txt  Makefile  README.md  bin_tree.c  bin_tree.h  bintree.c  bintree.h  code_generator.c  code_generator.h  debug.h  dynstring.c  dynstring.h  errors.c  errors.h  expressions.c  expressions.h  ifj21.c  interpret.c  list.c  list.h  macros.h  parser.c  parser.h  progfile.c  progfile.h  rozdeleni  rozsireni  scanner.c  scanner.h  semantics.c  semantics.h  stack.c  stack.h  sym_table_macros.h  symstack.c  symstack.h  symtable.c  symtable.h  testgen.c
doc/: Doxyfile  Makefile  dokumentace.tex
doc/rules_generation/: a.out  latex  rules.tex  rules_format_2  rules_generator.cmi  rules_generator.cmo  rules_generator.ml  rules_operation_format_2
doc/src/: 00-project.tex  01-scanner.tex  02-parser.tex  README.md  fitiel.cls  latexmkrc
documentation/rules_generation/: rules_generator.ml  run
scripts/: convert_pt.py
scripts/rules_generation/: run.sh
src/: code_generator.c  debug.h  dynstring.h  errors.h  ifj21.c  parser.c  progfile.h  scanner.h  semantics.c  symstack.c  symstack.h
tests/: TEST_GENERAL.py  expressions_invalid.tl  failed_parser.txt  failed_scanner.txt  ic21int  identif_bad.tl  identif_ok.tl  ifj21.tl  integer_bad.tl  integer_ok.tl  number_bad.tl  number_ok.tl  ok_function_declarations.tl  ok_function_declarations_short.tl  run.sh  run_tests.sh  scanner_0.tl  scanner_24.tl  scanner_32.tl  scanner_39.tl  scanner_47.tl  scanner_56.tl  scanner_67.tl  scanner_75.tl  scanner_89.tl  scanner_94.tl  string_bad.tl  string_ok.tl  test_valid.sh  testgen.c  tests.c  tests.h  tests_lib.sh  tests_parser.sh  tests_scanner.py  tests_scanner.sh  tests_scanner_lib.sh  tests_shch.sh  tokens_invalid.tl
tests/lexical_errors/: sasha14_1.tl  sasha15_1.tl  sasha18_1.tl  sasha19_1.tl  sasha20_1.tl  sasha22_1.tl  sasha24_1.tl  sasha28_1.tl  sasha31_1.tl  sasha32_1.tl  sasha34_1.tl  sasha35_1.tl  sasha36_1.tl  sasha40_1.tl  sasha43_1.tl  sasha44_1.tl  sasha45_1.tl  sasha48_1.tl  sasha49_1.tl  sasha4_1.tl  sasha50_1.tl  sasha51_1.tl  sasha52_1.tl  sasha53_1.tl  sasha54_1.tl  sasha55_1.tl  sasha56_1.tl  sasha57_1.tl  sasha5_1.tl  sasha60_1.tl  sasha61_1.tl  sasha63_1.tl  sasha64_1.tl  sasha68_1.tl  sasha69_1.tl  sasha71_1.tl  sasha72_1.tl  sasha77_1.tl  sasha79_1.tl  sasha87_1.tl  (+20 more)
tests/semantic_errors/: andrei0_4.tl  andrei0_7.tl  andrei10_4.tl  andrei10_6.tl  andrei11_3.tl  andrei12_3.tl  andrei13_6.tl  andrei14_6.tl  andrei15_3.tl  andrei15_6.tl  andrei16_3.tl  andrei16_6.tl  andrei17_3.tl  andrei19_6.tl  andrei1_3.tl  andrei1_4.tl  andrei1_6.tl  andrei20_3.tl  andrei20_6.tl  andrei21_6.tl  andrei22_3.tl  andrei22_6.tl  andrei23_3.tl  andrei23_6.tl  andrei24_3.tl  andrei24_6.tl  andrei25_3.tl  andrei25_6.tl  andrei26_3.tl  andrei26_6.tl  andrei27_3.tl  andrei27_6.tl  andrei28_3.tl  andrei28_6.tl  andrei29_3.tl  andrei2_4.tl  andrei2_5.tl  andrei2_6.tl  andrei30_3.tl  andrei30_6.tl  (+73 more)
tests/syntax_errors/: sasha14_2.tl  sasha18_2.tl  sasha20_2.tl  sasha24_2.tl  sasha25_2.tl  sasha26_2.tl  sasha27_2.tl  sasha35_2.tl  sasha41_2.tl  sasha45_2.tl  sasha46_2.tl  sasha4_2.tl  sasha5_2.tl  test11_2.tl  test14_2.tl  test32_2.tl  test3_2.tl  test41_2.tl  test43_2.tl  test46_2.tl  test49_2.tl  test70_2.tl  test75_2.tl  test79_2.tl  test80_2.tl  test82_2.tl  test84_2.tl  test87_2.tl  test88_2.tl  test90_2.tl  test92_2.tl  test93_2.tl  test94_2.tl  test95_2.tl  test96_2.tl  test97_2.tl  test98_2.tl  test99_2.tl  test_7.tl
tests/test_inputs_invalid/1_lexical/: 11_scanner_11.tl  29_scanner_x.tl  41_scanner_x.tl  42_scanner_x.tl  46_scanner_x.tl  62_scanner_x.tl  6_scanner_11.tl  73_scanner_x.tl  74_scanner_x.tl  75_scanner_x.tl  76_scanner_x.tl  81_scanner_x.tl  82_scanner_x.tl  83_scanner_x.tl  86_scanner_x.tl  89_scanner_x.tl  98_scanner_x.tl
tests/test_inputs_invalid/2_syntax/: 0_tokens_valid.tl  1_parser.tl  tests_parser.sh
tests/test_inputs_invalid/3_definition/: 18_3.tl  21_3.tl
tests/test_inputs_invalid/8_runtime_nil/: 0.tl  1.tl  2.tl  3.tl  4.tl
tests/test_inputs_invalid/9_zero_divide/: 0.tl  1.tl  2 .tl  3.tl  4.tl  5.tl  6.tl
tests/test_inputs_valid/: 0_vypocet_faktorialu_iterativne.tl
tests/valid_programs_krivka_tests/: .examples.sh.swp  README  example1.tl  example2.out  example2.tl  example3.in  example3.out  examples.sh  fun.tl  hello.out  hello.tl  multiassign.out  multiassign.tl  substr.out  visibility.out  visibility.tl  whitespaces.out  whitespaces.tl
tests/without_errors/: andrei_gen0_0.tl  andrei_gen1_0.tl  andrei_gen2_0.tl  andrei_gen3_0.tl  andrei_gen4_0.tl  sasha10_0.tl  sasha11_0.tl  sasha14_0.tl  sasha15_0.tl  sasha16_0.tl  sasha17_0.tl  sasha19_0.tl  sasha1_0.tl  sasha20_0.tl  sasha21_0.tl  sasha22_0.tl  sasha29_0.tl  sasha31_0.tl  sasha32_0.tl  sasha34_0.tl  sasha36_0.tl  sasha38_0.tl  sasha43_0.tl  sasha44_0.tl  sasha47_0.tl  sasha48_0.tl  sasha49_0.tl  sasha4_0.tl  sasha50_0.tl  sasha51_0.tl  sasha52_0.tl  sasha53_0.tl  sasha54_0.tl  sasha55_0.tl  sasha58_0.tl  sasha59_0.tl  sasha5_0.tl  sasha60_0.tl  sasha61_0.tl  sasha62_0.tl  (+45 more)
